--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
+  <meta http-equiv="refresh" content="0; URL=https://www.smhukuk.av.tr/" />
   </head>
   <body>
     <title>SM Hukuk & Danışmanlık Bürosu</title>
